# moonlight

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
data/: README.md
data/benchmark/: README.md
data/benchmark/challenge_set/: challenge_seed.jsonl
data/flores_submission/: README.md  div_Thaa.devtest  eng_Latn.devtest  flores_metadata.json
docs/: DATASET.md  benchmark-design-spec.md  dhivehimt-bench-paper.md  literature-review-dhivehi-mt-evaluation.md  moonlight-rag-dhivehi-mt.html  moonlight-rag-dhivehi-mt.md  pdf-professional.css  review-response-action-items.md
docs/adr/: 0001-corpus-as-retrieval-index.md  0002-hybrid-retrieval.md  0003-two-translation-modes.md  0004-evaluation-with-sacrebleu.md  0005-dhivehimt-bench-design.md  README.md
moonlight/: __init__.py  cli.py  corpus.py  db.py  dv_fluency.py  llm.py  place_names.py  pricing.py  sentence_memory.py  translator.py
moonlight/web/: app.py  db_dep.py  limits.py
moonlight/web/api/: align_batch.py  alternatives.py  benchmarks.py  concordance.py  fluency.py  glossary_api.py  history.py  ner.py  spellcheck.py  translate.py
moonlight/web/static/: workbench.html
moonlight/web/static/css/: moonlight.css
moonlight/web/static/js/: thaana-keyboard.js  workbench.js
results/: cross_run_significance.json
scripts/: add_constitution.py  add_fluency_scores.py  benchmark_models.py  check_alignment_quality.py  check_challenge_result_staleness.py  cross_run_significance.py  esa_annotate.py  eval_baseline_vs_moonlight.py  extract_benchmark_segments.py  finalize_benchmark_segments.py  format_flores.py  generate_demo.py  import_from_kahzaabu.py  llm_judge.py  run_benchmark.py  run_build_glossary.py  scrape_presidency.py
tests/: test_corpus.py  test_db.py  test_llm.py  test_place_names.py  test_sentence_memory.py  test_translator.py  test_web_benchmarks_api.py
