[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "moonlight-mt"
version = "0.1.0"
description = "English ↔ Dhivehi translation engine for Maldives Presidency Office press releases"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "Moonlight Contributors" }]
keywords = [
    "machine-translation", "dhivehi", "thaana", "maldives",
    "low-resource-mt", "retrieval-augmented-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "anthropic>=0.30",
    "openai>=1.30",
    "click>=8.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
]
eval = [
    "sacrebleu>=2.4",
    "tabulate>=0.9",
]
embeddings = [
    # Local CPU embeddings for hybrid BM25+semantic retrieval.
    # No API key required; model downloaded automatically on first use.
    "sentence-transformers>=2.7",
    "numpy>=1.24",
]
scrape = [
    # Minimal HTTP fetcher for bootstrapping the corpus from
    # presidency.gov.mv. Not required if importing from a
    # pre-built DB (e.g. via scripts/import_from_kahzaabu.py).
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]
dev = [
    "moonlight-mt[eval,embeddings]",
    "pytest>=7",
    "pytest-cov>=4.0",
]

[project.scripts]
moonlight = "moonlight.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["moonlight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=moonlight --cov-report=term-missing --cov-fail-under=40"
# Current baseline: 42% (core logic ~58-86%, web API endpoints 0% — need httpx integration tests)

[tool.coverage.run]
omit = ["moonlight/web/static/*", "scripts/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py38"
